--- a/blog-angular/src/index.html
+++ b/blog-angular/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>BlogAngular - nbeverton</title>
-  <base href="/blog-angular/src/">
+  <base href="/blog-angular">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
